{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 53,
  "lineage": "5d8abd70-3b71-f52e-87ab-d1f843e76990",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Instance01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e742cca61fb65051",
            "arn": "arn:aws:ec2:ap-south-1:912865153494:instance/i-09b2a89897f236865",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09b2a89897f236865",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PublicEC2-1A",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-049262a6b1a3cc49a",
            "private_dns": "ip-192-168-0-87.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06368ff639c6cc99f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fcbdb2ad7ded1296",
            "tags": {
              "Name": "Instance01"
            },
            "tags_all": {
              "Name": "Instance01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02094b157e47361b7"
            ]
          },
          "dependencies": [
            "aws_subnet.pub_sub",
            "aws_vpc.cust_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:912865153494:internet-gateway/igw-0a1e9efe3196f22b1",
            "id": "igw-0a1e9efe3196f22b1",
            "owner_id": "912865153494",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-081c7ef16e823c394"
          },
          "dependencies": [
            "aws_vpc.cust_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pr-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:912865153494:route-table/rtb-0f2c936efde0e169b",
            "id": "rtb-0f2c936efde0e169b",
            "owner_id": "912865153494",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a1e9efe3196f22b1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub_rt"
            },
            "tags_all": {
              "Name": "pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-081c7ef16e823c394"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.cust_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pr-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:912865153494:route-table/rtb-03d65d6ae4564e7df",
            "id": "rtb-03d65d6ae4564e7df",
            "owner_id": "912865153494",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pri_rt"
            },
            "tags_all": {
              "Name": "pri_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-081c7ef16e823c394"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cust_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041e92d782131c7ce",
            "route_table_id": "rtb-0f2c936efde0e169b",
            "subnet_id": "subnet-0fcbdb2ad7ded1296"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.pr-1",
            "aws_subnet.pub_sub",
            "aws_vpc.cust_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0537154fbcfd7ee6a",
            "route_table_id": "rtb-03d65d6ae4564e7df",
            "subnet_id": "subnet-0849ce5bc6c89ab83"
          },
          "dependencies": [
            "aws_route_table.pr-2",
            "aws_subnet.pri_sub",
            "aws_vpc.cust_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Multi-Ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:912865153494:security-group/sg-02094b157e47361b7",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02094b157e47361b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Multi-Ports",
            "name_prefix": "",
            "owner_id": "912865153494",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Multi-ports"
            },
            "tags_all": {
              "Name": "Multi-ports"
            },
            "timeouts": null,
            "vpc_id": "vpc-081c7ef16e823c394"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cust_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:912865153494:subnet/subnet-0849ce5bc6c89ab83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0849ce5bc6c89ab83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "912865153494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pri_sub"
            },
            "tags_all": {
              "Name": "Pri_sub"
            },
            "vpc_id": "vpc-081c7ef16e823c394"
          },
          "dependencies": [
            "aws_vpc.cust_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:912865153494:subnet/subnet-0fcbdb2ad7ded1296",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.0.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcbdb2ad7ded1296",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "912865153494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_sub"
            },
            "tags_all": {
              "Name": "pub_sub"
            },
            "vpc_id": "vpc-081c7ef16e823c394"
          },
          "dependencies": [
            "aws_vpc.cust_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cust_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:912865153494:vpc/vpc-081c7ef16e823c394",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-0cd1fda501b5a3d54",
            "default_route_table_id": "rtb-0f9bebfec7d09859e",
            "default_security_group_id": "sg-0d1cfae2123243c30",
            "dhcp_options_id": "dopt-0c85461bdd903fc85",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-081c7ef16e823c394",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f9bebfec7d09859e",
            "owner_id": "912865153494",
            "tags": {
              "ENV": "Testing",
              "Name": "cust_vpc"
            },
            "tags_all": {
              "ENV": "Testing",
              "Name": "cust_vpc"
            }
          }
        }
      ]
    }
  ]
}